Add 'Register new contact' option [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -737,7 +737,7 @@ div.page-activity {
 
   .tasks-count.full-screen {
     color: $color-primary;
-  }  
+  }
 
   .ui.full.segment {
 
@@ -968,7 +968,7 @@ div.page-activity.acute-illness {
       }
 
       .register-helper {
-        margin-bottom: 10px;
+        margin-top: 20px;
       }
 
       .items {
