Fix for https://github.com/Gizra/ihangane/issues/2733#issuecomment-950661451, point 1 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2606,6 +2606,7 @@ div.page-report.well-child {
 }
 
 div.page-activity.well-child,
+div.page-report.acute-illness,
 div.page-report.well-child {
 
   .heading {
