--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2549,7 +2549,8 @@ div.page-report.acute-illness {
       width: 8px;
     }
 
-    div.pane.actions-taken {
+    div.pane.actions-taken,
+    div.pane.next-steps {
       @include next-steps;
     }
 
