Allow ending encounter from Well Child progress report [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2558,9 +2558,6 @@ div.page-report.acute-illness {
       }
     }
 
-    div.actions {
-      margin: 20px 0 0 0;
-    }
   }
 }
 
@@ -2910,6 +2907,10 @@ div.page-report.well-child {
       font-weight: 600;
       padding: 15px 10px;
     }
+  }
+
+  .ui.report.unstackable.items .actions {
+    margin: 20px 0 0 0;    
   }
 }
 
