fix the labels on immunization Progress report

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2654,7 +2654,7 @@ div.page-report.well-child {
     text-transform: uppercase;
 
     &.done {
-      background: $color-blue;
+      background: $color-cyan;
     }
 
     &.behind,
