A fix [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -3257,8 +3257,7 @@ div.page-case-management {
 
       .trace-contact-entry {
 
-        .name,
-        .reporter {
+        .name {
           width: 150px;
         }
 
