--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -3263,6 +3263,8 @@ div.page-case-management {
 
         .reporter {
           align-self: center;
+          font-size: 20px;
+          font-weight: normal;
           width: 145px;
         }
 
