--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -882,7 +882,8 @@ div.page-activity.trace-contact {
 }
 
 // Acute Illness Activity page
-div.page-activity.acute-illness {
+div.page-activity.acute-illness,
+div.page-activity.trace-contact {
 
   .ui.full.segment {
 
