Styling [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -879,6 +879,10 @@ div.page-activity.trace-contact {
     }
   }
 
+  .ui.full.segment .symptoms-form .checkbox-select-input .ui.checkbox.activity {
+    margin-bottom: 25px;
+  }
+
 }
 
 // Acute Illness Activity page
