Days table + styling [ci skip]

--- a/client/src/assets/scss/_date-selector.scss
+++ b/client/src/assets/scss/_date-selector.scss
@@ -5,14 +5,92 @@ DateSelector
 .date-selector-popup {
   background: $color-primary;
   height: 100%;
+  padding: 40px 70px;
   width: 100%;
 
-  input,
+  p {
+    color: $color-white;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 0;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
   select {
     background-color: $color-white;
-    border: 2px solid $color-gray-border;
+    border: 1px solid $color-white;
+    border-radius: 10px;
     color: $color-text;
-    width: 50%;
+    font-size: 2.5rem;
+    border: 2px solid $color-gray;
+    padding: 0 0.5em;
+    line-height: 0.5;
+    text-align: left;
+    height: 70px;
+    width: 100%;
+  }
+
+  .year {
+    float: left;
+    width: 35%;
+    margin-right: 110px;
+  }
+
+  .month {
+    float: left;
+    width: 45%;
+  }
+
+  .days {
+    padding-top: 120px;
+
+    table {
+      text-align: center;
+      width: 100%;
+
+      th {
+        color: $color-white;
+        text-transform: uppercase;
+      }
+
+      td {
+        background-color: $color-white;
+        border: 10px solid $color-primary;
+        color: $color-text;
+        font-size: 24px;
+        font-weight: bold;
+        height: 80px;
+      }
+
+      td.date-selector--dimmed,
+      td.date-selector--disabled {
+        background-color: $color-lighter-gray;
+        color: $color-white;
+      }
+
+      td.date-selector--disabled {
+        opacity: 0.6;
+      }
+
+      td.date-selector--selected {
+        background-color: $color-yellow;
+        color: $color-white;
+      }
+
+
+    }
+
+  }
+
+  .ui.button {
+    background: $color-white;
+    border-radius: 5px;
+    color: $color-text;
+    display: block;
+    margin-left: 30px;
+    margin-top: 40px;
+    width: 90%;
   }
 }
 
