Close button + replace input on page [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -935,6 +935,17 @@ h3.ui.header {
         }
       }
 
+      .date-input {
+        font-size: 2rem;
+        border: 2px solid $color-gray;
+        padding: 0 0.5em;
+        line-height: 45px;
+        text-align: center;
+        height: 50px;
+        width: 100%;
+        color: $color-text;
+      }
+
       .birtdate-label {
         margin-top: 45px;
       }
