--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -26,6 +26,7 @@ $color-svg-grid:            #8097B1;
 $color-orange-dark:         #F7931E;
 $color-blue:                #4C06FF;
 $color-green:               #25D625;
+$color-green-dark:          #02B5B2;
 $color-yellow:              #D9E021;
 $color-orange-light:        #FBB03B;
 $color-cyan:                #03B5AA;
