View entries on Case Management page

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -3298,6 +3298,10 @@ div.page-case-management {
           p {
             margin-bottom: 0;
           }
+
+          &.center {
+            text-align: center;
+          }
         }
       }
 
