WIP: view the list of actions [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2131,6 +2131,7 @@ div.page-clinical-progress-report {
 
   .risk-factors,
   .medical-diagnosis,
+  .chw-activity,
   .obstetric-diagnosis {
     background: $color-white;
     margin-bottom: 20px;
