--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2697,6 +2697,10 @@ div.page-report.well-child {
 
     .next-due {
       width: 20%;
+
+      &.red {
+        color: $color-velvet
+      }
     }
   }
 
